# super_otonom_v7

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  _pytest_collect.txt  _pytest_full.txt  _setup_build.py  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  test_10000.py  test_5000.py  test_sonuc.txt
.github/: REQUIRED_CHECKS.md  dependabot.yml  pull_request_template.md  release-please-config.json
.github/workflows/: cd.yml  ci-windows.yml  ci.yml  mutation.yml  nightly-backup.yml  nightly-kupiec.yml  nightly-risk-report.yml  release-please.yml  security.yml
.pytest_basetemp/: test_chaos_circuit_breaker_opecurrent  test_chaos_fetch_all_ohlcv_exccurrent  test_chaos_keyboard_interrupt_current  test_chaos_order_book_slow_matcurrent
.pytest_basetemp/test_chaos_circuit_breaker_ope0/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope1/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope10/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope100/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope101/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope102/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope103/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope104/: st.json
.pytest_basetemp/test_chaos_circuit_breaker_ope105/: st.json
.scannerwork/: report-task.txt
.sonar/: report-task.txt
config/: dependency_security.json  var_limits.yaml
data/: bot_engine_topology_manifest.json  capital_journal.jsonl  execution_topology_manifest.json  orders.jsonl  package_topology_manifest.json  risk_global_state_audit.json  test_layout_manifest.json  universe_schedule_binance.json  universe_schedule_binance.meta.json  var_stress_grid_default.json  var_topology_manifest.json  vc_fund_wallets.json  whale_wallets.json
docker/: alertmanager-entrypoint.sh  alertmanager.yml  nginx-tls.conf  nginx.conf  prometheus.yml  vault-entrypoint.sh  vault-unseal.sh  vault.hcl
docs/: ASYNC_AUDIT.md  AUDIT.md  BRANCH_PROTECTION_STATUS.md  CHANGELOG.md  COMMUNITY_SENTIMENT.md  DECISION_PRIORITY.md  DEFI_PROTOCOL_INTELLIGENCE.md  DEVELOPER_ACTIVITY_TRACKER.md  DR_BCP.md  DR_RUNBOOK.md  EDGE_RESEARCH_PLAN.md  EDGE_ROADMAP.md  EDGE_VALIDATION.md  ETF_FLOW.md  EVIDENCE.md  EXCHANGE_FLOW.md  EXPLOIT_DETECTOR.md  FUNDING_RATE_ALPHA.md  GITHUB_ACTIONS_CD_SETUP.md  INSIDER_FUSION_CONTROLLER.md  INSTITUTIONAL_CONTROL_CHECKLIST_TR.md  KOL_TRACKER.md  LIQUIDATION_INTELLIGENCE.md  LISTING_INTELLIGENCE.md  MACRO_EVENT_INTELLIGENCE.md  MODEL_INVENTORY.md  MODEL_VALIDATION_TEMPLATE.md  OBSERVABILITY_DRILL.md  ONCHAIN_INTELLIGENCE.md  OPTIONS_FLOW.md  P09_BANDS.md  P1_EDGE_REPORT.md  RISK_APPETITE.md  RISK_DASHBOARD.md  RISK_METHODOLOGY.md  RUNBOOK.md  SECRETS_AUDIT_LAST.md  SLO.md  STABLECOIN_INTELLIGENCE.md  TESTNET_KEY_SETUP.md  (+6 more)
go_redis_bridge/: go.mod  main.go
go_service/: Dockerfile  go.mod  main.go
scripts/: __init__.py  audit_var_source.py  backup.sh  backup_daily.cmd  backup_daily.ps1  check_kanon_drift.py  check_model_validation_due.py  check_network.cmd  convert_bulk_check_to_assert.py  dependency_security.py  edge_cost_capacity.py  edge_decision_diag.py  edge_funding.py  edge_null_control.py  edge_raw_signal.py  edge_validate.py  edge_window_backtest.py  env_harden_secrets.cmd  env_harden_secrets.ps1  fastrun_audit_quick.cmd  fastrun_audit_quick.ps1  fastrun_bot_engine_topology.cmd  fastrun_bot_engine_topology.ps1  fastrun_clock_skew.cmd  fastrun_clock_skew.ps1  fastrun_execution_topology.cmd  fastrun_execution_topology.ps1  fastrun_faz1.cmd  fastrun_faz1.ps1  fastrun_go_live.cmd  fastrun_go_live.ps1  fastrun_ha.cmd  fastrun_ha.ps1  fastrun_hard_safety.cmd  fastrun_hard_safety.ps1  fastrun_network_lock.ps1  fastrun_observability.cmd  fastrun_observability.ps1  fastrun_p09.cmd  fastrun_p09.ps1  (+50 more)
super_otonom/: __init__.py  adversarial_robustness.py  ai_confidence_bridge.py  ai_layer.py  aiohttp_compat.py  alert_manager.py  alertmanager_telegram_bridge.py  alpha_decay_realtime_monitor.py  alternative_data_engine.py  analyzer.py  async_io.py  audit_log.py  autonomous_decision_core.py  backtest_leakage_guard.py  backtest_universe.py  backtester.py  benchmark_katman_a.py  bot_engine.py  bot_engine_audit.py  bot_engine_capital_patch.py  bot_engine_risk_bridge.py  bot_engine_status.py  bot_engine_topology.py  bot_patch_registry.py  capital_engine.py  causal_alpha_engine.py  clock_skew.py  clock_skew_audit.py  concentration_risk.py  confidence_calibration.py  config.py  conftest.py  coordination_resilience.py  correlation_manager.py  coverage.xml  cross_venue_leadlag_intelligence.py  data_freshness.py  data_quality_governance.py  dealer_intent_inference_engine.py  decision_context.py  (+118 more)
tests/: __init__.py  _prompt04_source.py  conftest.py  test_10000.py  test_5000.py  test_5000_phase11_phase21.py  test_5000_phase1_phase2.py  test_5000_phase22_phase30.py  test_5000_phase31_cpp_optional.py  test_5000_phase32_phase38.py  test_5000_phase3_phase5.py  test_5000_phase6_phase10.py  test_adversarial_robustness.py  test_ai_layer.py  test_ai_layer_paths.py  test_alternative_data_engine.py  test_analyzer_helpers.py  test_analyzer_regime.py  test_async_io_prompt10.py  test_audit_modules_coverage.py  test_audit_quick_fastrun.py  test_backtester.py  test_backup_restore.py  test_binance_testnet_preflight.py  test_bot_engine_96.py  test_bot_engine_coverage.py  test_bot_engine_paper_trades.py  test_bot_engine_portfolio_risk_tick.py  test_bot_engine_pre_trade_var_gate.py  test_bot_engine_topology_fastrun.py  test_bot_engine_var_cap_sizing.py  test_bot_engine_var_limits_tick.py  test_bot_main_coverage_ext.py  test_capital_engine.py  test_capital_engine_journal_sink.py  test_capital_engine_v2_fixes.py  test_capital_engine_v3_fixes.py  test_causal_alpha_engine.py  test_cd_release_please_hotfix.py  test_circuit_breaker.py  (+135 more)
(+967 files in other folders)
