[build-system]
# PYSEC-2025-49: ≥78.1.1. Üst sınır: CI ve varsayılan kurulum `.[dev]` torch içermez; fakat `Dockerfile`,
# `requirements.txt` (torch) ve `pip install -e ".[lstm]"` yolunda PyTorch tekerlekleri sıkça setuptools<82 ister — <82 kaldırılırsa o ortamlarda çakışma döner.
requires = ["setuptools>=78.1.1,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_otonom"
version = "7.0.0"
description = "Kurumsal seviye kripto trading sistemi"
requires-python = ">=3.10"
# Bağımlılık / tedarik zinciri taraması (çeyrek veya deploy öncesi): docs/AUDIT.md §2.2.1 — pip-audit; RCO kayıt tablosu.
dependencies = [
    "ccxt>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "hypothesis>=6.100",
    "mutmut>=2.4.0,<3",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8.0",
]
lstm = ["torch>=2.0.0"]

[project.scripts]
super-otonom = "super_otonom.main_loop:main"
super-otonom-release-gate = "super_otonom.release_gate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["super_otonom*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
# Proje kökünde .pytest_basetemp kullanmayın — Windows’ta rm_rf sırasında WinError 5 (erişim engellendi) ile yüzlerce ERROR.
addopts = "-q"
markers = [
    "hypothesis: property-based veya stateful Hypothesis testleri",
    "release_gate: PROMPT-A12 — release öncesi zorunlu smoke (pytest -m release_gate)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["super_otonom", "tests"]

[tool.ruff.lint]
# E402: modül docstring + from __future__ sonrası import sırası (mevcut stil)
# E501: satır uzunluğu — aşamalı temizliğe bırakıldı
ignore = ["E402", "E501"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Dev coverage sweep: tek satırda çok ifade + özgün stil; yeniden formatlamak riskli.
"super_otonom/test_10000.py" = ["E701", "E702", "E722", "E741"]
"super_otonom/test_5000.py" = ["E701", "E702", "E722", "E741"]

[tool.coverage.run]
source = ["super_otonom"]
# Dal + tüm paket — sahte %100 yok; yalnızca test/stres ve ağır skorlama modülleri omit.
branch = true
omit = [
    "*/__init__.py",
    "super_otonom/conftest.py",
    "super_otonom/test_*.py",
    "super_otonom/stress_test.py",
    "*/signal_quality_scorer.py",
    "*/correlation_manager.py",
    "*/ml_client.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# Mutation testing (mutmut 2.x). Odak: risk / sermaye / ontology / pre-trade.
# Skor: mutmut results — hedef hayatta kalan <%20 (öldürme >%80). Ayrıntı: .github/workflows/mutation.yml
[tool.mutmut]
paths_to_mutate = [
    "super_otonom/risk_manager.py",
    "super_otonom/capital_engine.py",
    "super_otonom/risk_ontology.py",
    "super_otonom/pre_trade_gate.py",
]
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no"
