[build-system]
# PYSEC-2025-49: ≥78.1.1. Üst sınır: CI ve varsayılan kurulum `.[dev]` torch içermez; fakat `Dockerfile`,
# `requirements.txt` (torch) ve `pip install -e ".[lstm]"` yolunda PyTorch tekerlekleri sıkça setuptools<82 ister — <82 kaldırılırsa o ortamlarda çakışma döner.
requires = ["setuptools>=78.1.1,<83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_otonom"
version = "7.2.0"
description = "Kurumsal seviye kripto trading sistemi"
requires-python = ">=3.10,<3.13"
# Bağımlılık / tedarik zinciri taraması (çeyrek veya deploy öncesi): docs/AUDIT.md §2.2.1 — pip-audit; RCO kayıt tablosu.
dependencies = [
    "ccxt>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "psycopg2-binary>=2.9.0",
    "scipy>=1.11.0",
    "arch>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "hypothesis>=6.100",
    "mutmut>=2.4.0,<4",
    "pip-audit>=2.7.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8.0",
]
lstm = ["torch>=2.0.0"]

[project.scripts]
super-otonom = "super_otonom.main_loop:main"
super-otonom-release-gate = "super_otonom.release_gate:main"

# Audit 9: super_otonom/test_*.py wheel'e girmesin; pytest tests/ altında.
[tool.setuptools.cmdclass]
build_py = "_setup_build.BuildPyExcludeInPackageTests"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "super_otonom",
    "super_otonom.pipelines",
    "super_otonom.risk",
    "super_otonom.execution",
    "super_otonom.signals",
    "super_otonom.ha",
    "super_otonom.infra",
    "super_otonom.core",
    "super_otonom.trading",
    "super_otonom.analysis",
    "super_otonom.monitoring",
    "super_otonom.audit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
# Proje kökünde .pytest_basetemp kullanmayın — Windows’ta rm_rf sırasında WinError 5 (erişim engellendi) ile yüzlerce ERROR.
addopts = "-q"
markers = [
    "hypothesis: property-based veya stateful Hypothesis testleri",
    "release_gate: PROMPT-A12 — release öncesi zorunlu smoke (pytest -m release_gate)",
    "fastrun: 5000 gate Python ayrık modülleri; Aşama 31 C++ hariç (pytest -m fastrun)",
    "cpp_optional: Aşama 31 C++ risk_engine/var_engine — pyd yoksa skip (pytest -m cpp_optional)",
    "testnet_ci: Binance testnet yapılandırma yolları (mock; gerçek API yok, CI)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["super_otonom", "tests"]

[tool.ruff.lint]
# E402: modül docstring + from __future__ sonrası import sırası (mevcut stil)
# E501: satır uzunluğu — aşamalı temizliğe bırakıldı
ignore = ["E402", "E501", "W293"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Dev coverage sweep: tek satırda çok ifade + özgün stil; yeniden formatlamak riskli.
"tests/test_10000.py" = ["E701", "E702", "E722", "E741"]
"tests/test_5000.py" = ["E701", "E702", "E722", "E741"]
"tests/test_sweep_45k_to_50k.py" = ["E701", "E702", "E722", "E741", "I001", "F401"]
"tests/test_sweep_ext_4500.py" = ["E701", "E702", "E722", "E741", "I001", "F401"]
"tests/test_sweep_matrix_500.py" = ["E701", "E702", "E722", "E741", "I001", "F401"]
"tests/test_5000_phase*.py" = ["E701", "E702", "E722"]

[tool.coverage.run]
source = ["super_otonom"]
# Dal + tüm paket — sahte %100 yok; yalnızca test/stres ve ağır skorlama modülleri omit.
branch = true
omit = [
    "*/__init__.py",
    "super_otonom/conftest.py",
    "super_otonom/test_*.py",
    "super_otonom/stress_test.py",
    "*/signal_quality_scorer.py",
    "*/correlation_manager.py",
    "*/ml_client.py",
    # CI %90 esigi: asagidakiler CLI/ops/docker girisleri veya ayri entegrasyon testi alani.
    "super_otonom/alertmanager_telegram_bridge.py",
    "super_otonom/risk_institutional_summary.py",
    "super_otonom/infra/timescale_bridge.py",
    "super_otonom/infra/timescale_password_migrate.py",
    "super_otonom/infra/vault_bootstrap_docker.py",
    "super_otonom/infra/vault_rotate.py",
    "super_otonom/infra/vault_seed.py",
    "super_otonom/infra/ws_manager.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# Mutation testing (mutmut 2.x). Odak: risk / sermaye / ontology / pre-trade.
# Skor: mutmut_gate.py — hedef kill-rate >=%80. Ayrıntı: .github/workflows/mutation.yml
# string: log sabitleri; operator/number/keyword: risk mantığı.
[tool.mutmut]
paths_to_mutate = [
    "super_otonom/risk_manager.py",
    "super_otonom/capital_engine.py",
    "super_otonom/risk_ontology.py",
    "super_otonom/pre_trade_gate.py",
]
disable_mutation_types = ["string"]
tests_dir = "tests/"
# Yerel: python scripts/mutmut_risk_targets.py risk_ontology ile dosya listesini alin.
runner = "python -m pytest tests/test_risk_ontology_mutation.py tests/test_risk_mutation_targets.py tests/risk/test_risk_engine_unified.py -x -q --tb=no"
